minio-dev/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio
  name: minio-deployment
  namespace: minio-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        command:
        - /bin/bash
        - -c
        args: 
        - minio server /data --console-address :9090
        volumeMounts:
        - mountPath: /data
          name: localvolume
        resources:
          limits:
            memory: 1000Mi
      volumes:
      - name: localvolume
        hostPath:
          path: /mnt/disk1/data
          type: DirectoryOrCreate
