minio-dev/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio-service
  namespace: minio-operator
spec:
  type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 3120
  selector:
    app: minio
