minio-dev/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-access-policy
  namespace: minio-operator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: minio-deployment
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
  - ports:
    - protocol: TCP
      port: 31200
